# libUVC-OpenCV-cpp

./: CMakeLists.txt  README.md  sample.cpp
libuvc/: libuvc.h  libuvc_config.h
